style/style.css
.topnav {
    list-style-type: none;
    margin: 0;
    padding: 0;
}

.topnav li {
    float: right;
}

.topnav a {
    display: block;
    text-align: center;
    padding: 16px;
    text-decoration: none;
}

.sticky {
    position: fixed;
    top: 0;
    width: 100%
}

.navbar-is-stuck+.content {
    padding-top: 50px;
}

#navbar {
    background-color: white;
    border-radius: 0px;
    border-bottom: 2px solid #29b6f6;
}

ul.nav>li:hover {
    box-shadow: 0px 0px 10px #e1f5fe;
}
.glow:hover{
    box-shadow: 0px 0px 10px #adf7ff;
    
}
.glow:focus{
    box-shadow: 0px 0px 10px #adf7ff;
    
}
.glow.mybtn{
    background-color: #29b6f6;
    color: white;
    font-weight: bold;
}
.flat{
    border-radius: 0px;
}
.activated>a {
    background-color: #29b6f6;
    font-weight: bold;
    color: white;
}

.activated>a:hover {
    background-color: #03a9f4;
    box-shadow: 0px 0px 10px #03a9f4;
}

.myHeader {
    box-shadow: 0px 3px 8px grey;
    z-index: 1000;
    
}

.material {
    color: #00acc1;
    background-color: #e0f7fa;
    box-shadow: 0px 3px 8px grey;
}

.navbar-default1 .navbar-toggle {
    border-color: #ddd
}

.navbar-default1 .navbar-toggle:focus,
.navbar-default1 .navbar-toggle:hover {
    background-color: #ddd
}

.navbar-default1 .navbar-toggle .icon-bar {
    background-color: #888
}

.social-fb:hover {
    color: #3B5998;
}

.social-tw:hover {
    color: #4099FF;
}

.social-gp:hover {
    color: #d34836;
}

.social-em:hover {
    color: #f39c12;
}

.nomargin {
    margin: 0px;
    padding: 0px;
}

.footer-bottom {
    background-color: #01579b;
    min-height: 30px;
    width: 100%;
}

.copyright {
    color: #fff;
    line-height: 30px;
    min-height: 30px;
    padding: 7px 0;
}

.design {
    color: #fff;
    line-height: 30px;
    min-height: 30px;
    padding: 7px 0;
    text-align: right;
}

.design a {
    color: #fff;
}


/************************************************************
*************************Footer******************************
*************************************************************/

footer {
    background-color: #0277bd;
    height: 300px;
    width: 100%;
    bottom: 0;
    font-weight: lighter;
    color: white;
}

.footerHeader {
    width: 100%;
    padding: 1em;
    background-color: #0288d1;
    text-align: center;
    color: white;
}

footer h3 {
    font-weight: lighter;
}

footer ul {
    padding-left: 5px;
    list-style: none;
}

footer p {
    text-align: justify;
    font-size: 12px;
}

footer iframe {
    width: 100%;
    position: relative;
    height: 170px;
}

.sm {
    list-style: none;
    overflow: auto;
}

.sm li {
    display: inline;
    padding: 5px;
    float: left;
}

.sm li a img {
    width: 32px;
}

.footer1 {
    background: #fff url("../images/footer/footer-bg.png") repeat scroll left top;
    padding-top: 40px;
    padding-right: 0;
    padding-bottom: 20px;
    padding-left: 0;
    /*	border-top-width: 4px;
	border-top-style: solid;
	border-top-color: #003;*/
}

.title-widget {
    color: #898989;
    font-size: 20px;
    font-weight: 300;
    line-height: 1;
    position: relative;
    text-transform: uppercase;
    font-family: 'Fjalla One', sans-serif;
    margin-top: 0;
    margin-right: 0;
    margin-bottom: 25px;
    margin-left: 0;
    padding-left: 28px;
}

.title-widget::before {
    background-color: #ea5644;
    content: "";
    height: 22px;
    left: 0px;
    position: absolute;
    top: -2px;
    width: 5px;
}

.widget_nav_menu ul {
    list-style: outside none none;
    padding-left: 0;
}

.widget_archive ul li {
    background-color: rgba(0, 0, 0, 0.3);
    content: "";
    height: 3px;
    left: 0;
    position: absolute;
    top: 7px;
    width: 3px;
}

.widget_nav_menu ul li {
    font-size: 13px;
    font-weight: 700;
    line-height: 20px;
    position: relative;
    text-transform: uppercase;
    border-bottom: 1px solid rgba(0, 0, 0, 0.05);
    margin-bottom: 7px;
    padding-bottom: 7px;
    width: 95%;
}

.title-median {
    color: #636363;
    font-size: 20px;
    line-height: 20px;
    margin: 0 0 15px;
    text-transform: uppercase;
    font-family: 'Fjalla One', sans-serif;
}

.footerp p {
    font-family: 'Gudea', sans-serif;
}

#social:hover {
    -webkit-transform: scale(1.1);
    -moz-transform: scale(1.1);
    -o-transform: scale(1.1);
}

#social {
    -webkit-transform: scale(0.8);
    /* Browser Variations: */
    -moz-transform: scale(0.8);
    -o-transform: scale(0.8);
    -webkit-transition-duration: 0.5s;
    -moz-transition-duration: 0.5s;
    -o-transition-duration: 0.5s;
}



/************************************************************
*************************choose us******************************
*************************************************************/

.services-section {
    background: none;
    padding: 4em 0;
}

.site-title h3 {
    color: #29b6f6;
    font-size: 2.5em;
    margin: 0;
    letter-spacing: 1px;
    font-weight: 800;
    padding:5px;
}
.site-title p {
    color: #999999;
    font-size: .9em;
    margin: 0;
}
.services-column h5 {
    color: #000000;
    font-size: 1.5em;
    margin: .5em 0;
    font-weight: 600;
}
.services-column p {
    color: #212121;
    font-size: .9em;
    line-height: 1.8em;
    margin: 0;
}
.icon {
    color:rgb(130, 220, 253);
    padding:15px;
    font-size:40px;
}
/************************************************************
*************************choose us******************************
*************************************************************/





/*//////////////////////////////////////////////////////
///////////////////////////////////////////////////////
///////////////style css //////////////////////////////
/////////////////////////////////////////////////////*/

h3 {
    font-size: 24px;
    font-size: 24px;
    font-size: 2.4rem;
}
.nopaddingleft {
    padding-left: 0;
}
.nopaddingright {
    padding-right: 0;
}
.overflownone {
    overflow: hidden!important;
}
/* ... */

